[package]
name = "buttclap"
version = "0.2.0"
edition = "2021"
authors = ["Lexi <x.ywtop@slmail.me>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/AlexanderPavlenko/ButtCLAP"
description = "CLAP plug-in to control things via Intiface® Central"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nice-plug = { git = "https://codeberg.org/RustAudio/nice-plug.git", rev = "9bc2ffa00acd0a68de46f217d7f220fa2d9caf59" }

buttplug_client = "10.0.3"
buttplug_transport_websocket_tungstenite = "10.0.3"
evmap = "11.0.0"

# not exported by buttplug_core
tokio = { version = "*", features = ["sync", "time", "macros"] }
futures = "*"

# not exported by nice-plug
crossbeam = "*"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
